[package]
name = "lone-ranger"
edition = "2018"
license = "MIT"
version = "1.0.3"
readme = "README.MD"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
description = "Subtitles downloader"
homepage = "https://github.com/DCjanus/lone-ranger"
repository = "https://github.com/DCjanus/lone-ranger.git"

[dependencies]
url = "2.1.0"
sha1 = { version = "0.6.0", features = ["std"] }
reqwest = "0.9.19"
failure = "0.1.5"
threadpool = "1.7.1"
structopt = "0.2.18"
path-absolutize = "1.1.6"

serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"

[[bin]]
name = "ranger"
path = "src/main.rs"
test = false
doc = false
