[package]
name = "lone-ranger"
edition = "2018"
license = "MIT"
version = "1.1.3"
readme = "README.MD"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
description = "Subtitles downloader"
homepage = "https://github.com/DCjanus/lone-ranger"
repository = "https://github.com/DCjanus/lone-ranger.git"

[dependencies]
tokio = { version = "0.2.18", features = ["full"] }
anyhow = "1.0.28"
chrono = "0.4.11"
once_cell = "1.4.0"
reqwest = { version = "0.10.4", features = ["json", "gzip", "brotli", "rustls-tls", "socks"], default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
bytes = "0.5.4"
structopt = "0.3.13"
sha1 = "0.6.0"
log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"] }
serde_json = "1.0.51"
url = "2.1.1"

[[bin]]
name = "ranger"
path = "src/main.rs"
test = false
doc = false
